tolk-tester/tests/invalid-syntax/err-3059.tolk
fun main() {
    int x = 0;
}

/**
@compilation_should_fail
@stderr expected `;`, got `x`
*/
